nginx-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: default
spec:
  ports:
    - port: 80
      nodePort: 30001
  type: NodePort
  selector:
    app: nginx
